# XtalPaint

./: .gitignore  .pre-commit-config.yaml  404.html  =2.0  LICENSE  README.md  example_integration.py  formula_not_in_train.json  formula_not_in_val.json  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yaml  deploy-docs.yml  docs-check.yml
analysis/: analyze-parameter-screening.ipynb  mc3d_structures_with_H.bz2
analysis/trajectories/: RMSD-analysis.ipynb  create-plots.ipynb
docs/: index.md
docs/examples/: README.md
examples/: README.md  index.html  running-with-AiiDA.ipynb  running-wo-AiiDA.ipynb
examples/running-with-AiiDA/: index.html
examples/running-wo-AiiDA/: index.html
mattergen-configs/: README.md
mattergen-configs/conf/: TD-paint.yaml  pos-only.yaml
mattergen-configs/conf/data_module/: alex_mp_20.yaml  mp_20.yaml
mattergen-configs/conf/lightning_module/diffusion_module/: TD-paint.yaml  csp.yaml  pos-only.yaml
mattergen-configs/conf/lightning_module/diffusion_module/corruption/: TD-paint.yaml  csp.yaml  pos-only.yaml
mattergen-configs/conf/trainer/: default.yaml
mattergen-configs/sampling_conf/: TD-paint.yaml  csp.yaml
scripts/: parameter-checks-baseline.py
search/: search_index.json
src/dbcsi_inpainting/: __init__.py  custom_predictor_corrector.py  data.py  data_utils.py  denoise.py  eval.py  evaluation.py  generate_inpainting.py  n_atoms.py  relaxation_utils.py  run_inpainting.py  run_inpainting_old.py  sampling.py  utils.py
src/dbcsi_inpainting/aiida/: README.md  __init__.py  config.yaml  config_baseline.yaml  config_invalid.yaml  config_repaint.yaml  config_schema.py  data.py  deserializers.py  eval.py  generate_candidates.py  inpainting_process.py  schema.py  serializers.py  workgraph.py
src/dbcsi_inpainting/aiida/tasks/: relax_parallel_utils.py  tasks.py
src/dbcsi_inpainting/aiida/workgraphs/: __init__.py  analysis.py  inpainting.py
src/dbcsi_inpainting/inpainting/: config_schema.py  generate_candidates.py  inpainting_process.py
src/dbcsi_inpainting/time_dependent/: __init__.py  corrector.py  corruption.py  diffusion_module.py  loss.py
src/dbcsi_inpainting/utils/: __init__.py  data_utils.py  misc.py  relaxation_utils.py
src/time-dependent/: corruption.py
src/xtalpaint/: data.py  eval.py  generate_inpainting.py  predictor_corrector.py
src/xtalpaint/aiida/: __init__.py  data.py  deserializers.py  serializers.py
src/xtalpaint/aiida/tasks/: __init__.py  relax_parallel_utils.py  tasks.py
src/xtalpaint/aiida/workgraphs/: analysis.py  inpainting.py
src/xtalpaint/inpainting/: __init__.py  config_schema.py  generate_candidates.py  inpainting_process.py
src/xtalpaint/time_dependent/: __init__.py  corrector.py  corruption.py  diffusion_module.py  gemnet.py  loss.py
src/xtalpaint/utils/: __init__.py  data_utils.py  relaxation_utils.py
stylesheets/: extra.css
test-mlflow/: run_inpainting.py  run_inpainting_baseline.py
tests/: __init__.py  conftest.py  test_aiida_data.py  test_eval.py  test_generate_candidates.py  test_relaxation_utils.py  test_schema.py  test_serializers.py
tests/data/: reference_structures.extxyz
