[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbcsi-inpainting"
version = "0.1.0"
description = "Diffusion based crystal structure inpainting"
authors = [{ name = "Timo Reents", email = "timo.reents@psi.ch" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.26.0",
    "numpy>=1.26.4",
    "pymatgen>=2025.10.7",
]





[project.entry-points."aiida.data"]
"dbcsi_inpainting.InpaintingStructure" = "dbcsi_inpainting.aiida.data:InpaintingStructure"
"dbcsi_inpainting.BatchedStructuresData" = "dbcsi_inpainting.aiida.data:BatchedStructuresData"

[project.optional-dependencies]
dev = [
    "aiida-core[tests]>=2.7.1",
    "pre-commit>=4.4.0",
    "pytest",
    "ruff>=0.14.4",
]
aiida = [
    "aiida-workgraph==0.5.2",
]

[tool.setuptools]
packages = ["dbcsi_inpainting"]
package-dir = {"" = "src"}

# Ruff configuration
[tool.ruff]
line-length = 79
target-version = "py310"
src = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["dbcsi_inpainting"]
known-third-party = ["numpy", "torch", "pymatgen", "mattergen"]
