[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbcsi-inpainting"
version = "0.1.0"
description = "Diffusion based crystal structure inpainting"
authors = [{ name = "Timo Reents", email = "timo.reents@psi.ch" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.25.0",
    "mattergen",
    "numpy>=1.26.4",
    "pyarrow>=22.0.0",
    "pymatgen>=2024.10.29",
]

[project.entry-points."aiida.data"]
"pythonjob.dbcsi_inpainting.aiida.data.InpaintingStructure" = "dbcsi_inpainting.aiida.data:InpaintingStructure"
"dbcsi_inpainting.BatchedStructuresData" = "dbcsi_inpainting.aiida.data:BatchedStructuresData"
"dbcsi_inpainting.PandasDataFrameData" = "dbcsi_inpainting.aiida.data:PandasDataFrameData"
"pythonjob.dbcsi_inpainting.aiida.data.BatchedStructures" = "dbcsi_inpainting.aiida.data:BatchedStructuresData"
"pythonjob.pandas.core.frame.DataFrame" = "dbcsi_inpainting.aiida.data:PandasDataFrameData"

[project.optional-dependencies]
dev = [
    "aiida-core[tests]>=2.7.1",
    "pre-commit>=4.4.0",
    "pytest",
    "ruff>=0.14.4",
]
aiida = [
    "aiida-workgraph==0.5.2",
]

[tool.setuptools]
packages = ["dbcsi_inpainting"]
package-dir = {"" = "src"}

# Ruff configuration
[tool.ruff]
line-length = 79
target-version = "py310"
src = ["src"]
lint.select = ["E", "F", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["dbcsi_inpainting"]
known-third-party = ["numpy", "torch", "pymatgen", "mattergen"]

[tool.uv.sources]
mattergen = { git = "https://github.com/microsoft/mattergen", rev = "v1.0.3" }

[tool.uv.extra-build-dependencies]
torch-cluster = ["torch"]
torch-scatter = ["torch"]
torch-sparse = ["torch"]
